tests/resources/invalid/type/definition/nested_non_mut_field.mamba
class B
    def mut my_num: Int <- 10

class A
    def b: B


def mut a <- A()
a.b.my_num <- 20
